Update step detection (95% correct), added WiFi scanner

--- a/OpenCV_async/res/values/strings.xml
+++ b/OpenCV_async/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">OpenCV_async</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_pedometer_test">STEP DETECTION TEST</string>
+    <string name="title_activity_wifi_scanner">WifiScanner</string>
 
 </resources>
